--- a/SalesWebMvc/Views/SalesRecords/GroupingSearch.cshtml
+++ b/SalesWebMvc/Views/SalesRecords/GroupingSearch.cshtml
@@ -1,7 +1,74 @@
-﻿
-@{
-    ViewData["Title"] = "GroupingSearch";
+﻿@model IEnumerable<IGrouping<Department, SalesRecord>>
+
+@{ViewData["Title"] = "GroupingSearch";
+    DateTime minDate = DateTime.Parse(ViewData["minDate"] as string);
+    DateTime maxDate = DateTime.Parse(ViewData["maxDate"] as string);
 }
 
-<h2>GroupingSearch</h2>
+<h3>Grouping Search</h3>
 
+<nav class="nav navbar">
+    <div class="container-fluid">
+        <form class="navbar-form  navbar-left" role="search">
+            <div class="form-group">
+                <div class=" form-group">
+                    <label for="minDate" class="control-label">Min Date</label>
+                    <input type="date" class="form-control" name="minDate" value=@ViewData["minDate"]>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class=" form-group">
+                    <label for="maxDate" class="control-label">Max Date</label>
+                    <input type="date" class="form-control" value=@ViewData["maxDate"] name="miaxDate" >
+                </div>
+            </div>
+               <button type="submit" class="btn btn-default btn-info">Filter</button>
+        </form>
+    </div>
+</nav>
+<a asp-action="Index" class="btn btn-info btn-default">Main Page</a>
+@foreach(var departmentGroup in Model)
+{
+    <div class="panel panel-primary">
+        <div class="panel-heading">
+            <h3 class="panel-title">Department @departmentGroup.Key.Name,Total Sales = @departmentGroup.Key.TotalSales(minDate,maxDate)</h3>
+        </div>
+        <div class=" panel-body">
+            <table class="table table-striped table-hover">
+                <thead>
+                    <tr class="bg bg-info">
+                        <th>
+                            Date
+                        </th>
+                        <th>
+                            Amount
+                        </th>
+                        <th>
+                            Seller
+                        </th>
+                        <th>
+                            Status
+                        </th>
+                    </tr>
+                </thead>
+                @foreach(var item in departmentGroup)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Date)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Amount)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Seller.Name)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Status)
+                        </td>
+                    </tr>
+                }
+            </table>
+        </div>
+    </div>
+}
