--- a/SalesWebMvc/Views/SalesRecords/Index.cshtml
+++ b/SalesWebMvc/Views/SalesRecords/Index.cshtml
@@ -6,13 +6,13 @@
 <hr />
 <div class="row">
     <div class="col-lg-4">
-        <form asp-action="SimpleSearch" class="form-horizontal"  >
+        <form  class="form-horizontal" asp-action="SimpleSearch">
             <fieldset>
                 <legend>Simple Search</legend>
                 <div class="form-group">
                     <label for="minDate" class="col-lg-3 control-label">Min Date</label>
                     <div class="col-lg-9">
-                        <input type="date"  name="minDate" class="form-control" />
+                        <input type="date" name="minDate" class="form-control" />
                     </div>
                 </div>
                 <div class="form-group">
@@ -21,11 +21,11 @@
                         <input type="date" name="maxDate" class="form-control" />
                     </div>
                 </div>
+                <div class="col-lg-4 col-lg-offset-3">
+                    <button type="submit" class="btn btn-default btn-info">Submit</button>
+                </div>
             </fieldset>
         </form>
-        <div class="col-lg-4 col-lg-offset-3">
-            <button type="submit" class="btn btn-default btn-info">Submit</button>
-        </div>
     </div>
 </div>
 <hr />
@@ -37,19 +37,19 @@
                 <div class="form-group">
                     <label for="minDate" class="col-lg-3 control-label">Min Date</label>
                     <div class="col-lg-9">
-                        <input type="date" class="form-control"  name="minDate"/>
+                        <input type="date" class="form-control" name="minDate" />
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="maxDate" class="col-lg-3 control-label">Max Date</label>
                     <div class="col-lg-9">
-                        <input type="date" class="form-control"  name="maxDate" />
+                        <input type="date" class="form-control" name="maxDate" />
                     </div>
+                </div>
+                <div class="col-lg-4 col-lg-offset-3">
+                    <button type="submit" value="submit" class="btn btn-info">Submit</button>
                 </div>
             </fieldset>
         </form>
-        <div class="col-lg-4 col-lg-offset-3">
-            <button type="submit" class="btn btn-default btn-info">Submit</button>
-        </div>
     </div>
 </div>
