--- a/SalesWebMvc/Views/SalesRecords/SimpleSearch.cshtml
+++ b/SalesWebMvc/Views/SalesRecords/SimpleSearch.cshtml
@@ -1,7 +1,83 @@
-﻿
+﻿@model IEnumerable<SalesWebMvc.Models.SalesRecord>
 @{
     ViewData["Title"] = "SimpleSearch";
 }
 
-<h2>SimpleSearch</h2>
+<h2>Simple Search</h2>
 
+<nav class="nav navbar-btn btn-primary">
+    <div class="container-fluid">
+        <form class="navbar-form navbar-left" role="search">
+            <div class="form-group">
+                <div class="form-group">
+                    <label for="minDate">Min Date</label>
+                    <input type="date" class="form-control" value=@ViewData["minDate"]  name="minDate"/>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="form-group">
+                    <label for="maxDate">Max Date</label>
+                    <input type="date" class="form-control" value=@ViewData["maxDate"] name="maxDate"/>
+                </div>
+            </div>
+            <button type="submit" class="btn btn-info">Filter</button>
+        </form>
+    </div>
+</nav>
+<a asp-action="Index" class="btn-info btn-default">Main Page</a>
+<div class="panel panel-primary">
+        <div class="panel-heading">
+            <h3 class="panel-title">Total Sales = @Model.Sum(obj => obj.Amount)</h3>
+        </div>        
+        <div class=" panel-body">
+            <table class="table table-hover table-striped">
+                <thead>
+                    <tr class="table-striped">
+                        <th>
+                            @Html.DisplayNameFor(model => model.Id)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Date)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Seller)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Seller.Department)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Amount)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Status)
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Id)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Date)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Seller.Name)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Seller.Department.Name)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Amount)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Status)
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+    </div>
